<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmutnb.rattapon.chatupon.chaturaphon.vanhub.SignUpActivity"
    android:background="#FAFAFA">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSaveData"
        android:text="บันทึกข้อมูล"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="@color/font" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/button3"
        android:layout_margin="15dp"
        android:background="#FAFAFA">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText8"
                    android:layout_weight="2"
                    android:hint="Full name"
                    android:textColor="@color/text"
                    android:inputType="text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="User"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_weight="2"
                    android:hint="User login"
                    android:textColor="@color/text"
                    android:inputType="text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:hint="password"
                    android:textColor="@color/text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:hint="email"
                    android:textColor="@color/text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tel"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:hint="tel"
                    android:textColor="@color/text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_weight="2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText10"
                    android:layout_weight="2"
                    android:hint="price"
                    android:textColor="@color/text"
                    android:inputType="text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeStart"
                    android:id="@+id/textView11"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner2"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeEnd"
                    android:id="@+id/textView12"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner3"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/specialnews"
                    android:id="@+id/textView13"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/font" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText13"
                    android:layout_weight="2"
                    android:hint="update"
                    android:textColor="@color/text"
                    android:inputType="text"
                    android:textColorHint="@color/textOR" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>